# devenv-python-r-for-research

./: .envrc  .gitignore  devenv.nix  devenv.yaml  flake.nix  flake.nix.baak  pyproject.toml
nix/: python-overlay.nix  r-overlay.nix
src/: load.py
