[project]
authors = [
  {name = "Lukas Erhard", email = "luerhard@googlemail.com"},
]
dependencies = [
  "ipywidgets>=8.1.7",
  "jupyter>=1.1.1",
  "pandas>=2.2.3",
  "pytest>=8.3.5",
]
description = "Template for R + Python analysis environment"
name = "devenv-template"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
include = ["src"]
